--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/AXS101_Empty_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/AXS101_Empty_Project/template.properties
@@ -11,7 +11,7 @@
 ###############################################################################
 
 #Template Default Values
-Emptyhs34.Ctemplate.label=Empty Project For ARC HS34
-Emptyhs34.Ctemplate.description=A skeletal Managed C project for ARC HS34. Creates a folder for sources and contains linker script and start file.
-Emptyhs34.basics.label=Basic Settings
-Emptyhs34.basics.description=Basic properties of a project
+Emptyaxs101.Ctemplate.label=Empty Project For AXS101
+Emptyaxs101.Ctemplate.description=A skeletal Managed C project for ARC AXS101 SDP. Creates a folder for sources and contains linker script and crt0 start file.
+Emptyaxs101.basics.label=Basic Settings
+Emptyaxs101.basics.description=Basic properties of a project
