Update empty projects for EM SK
Signed-off-by: Anton Kolesov <Anton.Kolesov@synopsys.com>

--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM4_Empty_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM4_Empty_Project/template.properties
@@ -11,7 +11,7 @@
 ###############################################################################
 
 #Template Default Values
-Emptyem4.Ctemplate.label=Empty Project For ARC EM4
-Emptyem4.Ctemplate.description=A skeletal Managed C project for ARC EM4. Creates a folder for sources and contains linker script and start file.
+Emptyem4.Ctemplate.label=Empty Project For EM SK EM4
+Emptyem4.Ctemplate.description=A skeletal Managed C project for EM Starter Kit EM4. Creates a folder for sources and contains linker script and start file.
 Emptyem4.basics.label=Basic Settings
 Emptyem4.basics.description=Basic properties of a project
