--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -2611,106 +2611,13 @@
       
       
       
-      <projectType
-            buildArtefactType="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.staticLib"
-            id="org.eclipse.cdt.cross.arc.gnu.windows.lib"
-            isAbstract="true">
-         <configuration
-               artifactExtension="a"
-               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
-               id="org.eclipse.cdt.cross.arc.gnu.windows.lib.debug"
-               name="Debug"
-               parent="org.eclipse.cdt.cross.arc.gnu.windows.configuration.base">
-            <toolChain
-                  id="org.eclipse.cdt.cross.arc.gnu.windows.lib.toolchain.debug"
-                  isAbstract="false"
-                  superClass="org.eclipse.cdt.cross.arc.gnu.windows.toolchain.base"
-                  targetTool="org.eclipse.cdt.cross.arc.gnu.windows.lib.archiver.debug">
-               <targetPlatform
-                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.platform.debug"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.platform.base">
-               </targetPlatform>
-               <builder
-                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.builder.debug"
-                     isAbstract="false"
-                     isVariableCaseSensitive="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.builder.base">
-               </builder>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.assembler.debug"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.assembler.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.c.compiler.debug"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.c.compiler.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.cpp.compiler.debug"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.cpp.compiler.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.archiver.debug"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.archiver.base">
-               </tool>
-            </toolChain>
-         </configuration>
-         <configuration
-               artifactExtension="a"
-               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
-               id="org.eclipse.cdt.cross.arc.gnu.windows.lib.release"
-               name="Release"
-               parent="org.eclipse.cdt.cross.arc.gnu.windows.configuration.base">
-            <toolChain
-                  id="org.eclipse.cdt.cross.arc.gnu.windows.lib.toolchain.release"
-                  isAbstract="false"
-                  superClass="org.eclipse.cdt.cross.arc.gnu.windows.toolchain.base"
-                  targetTool="org.eclipse.cdt.cross.arc.gnu.windows.lib.archiver.release">
-               <targetPlatform
-                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.platform.release"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.platform.base">
-               </targetPlatform>
-               <builder
-                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.builder.release"
-                     isAbstract="false"
-                     isVariableCaseSensitive="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.builder.base">
-               </builder>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.assembler.release"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.assembler.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.c.compiler.release"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.c.compiler.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.cpp.compiler.release"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.cpp.compiler.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.windows.lib.archiver.release"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.archiver.base">
-               </tool>
-            </toolChain>
-         </configuration>
-      </projectType>
       
       <toolChain
             archList="all"
             id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base"
             isAbstract="false"
             isToolChainSupported="org.eclipse.cdt.cross.arc.gnu.linux.IsToolChainSupported"
-            name="ARC GNU Toolchain for EM Linux host "
+            name="ARC GNU Toolchain for EM host "
             osList="linux,win32">
          <targetPlatform
                archList="all"
@@ -3007,7 +2914,7 @@
       </toolChain>
       <configuration
             id="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base"
-            name="ARC GNU Toolchain for EM Linux host Configuration"
+            name="ARC GNU Toolchain for EM host Configuration"
             parent="org.eclipse.cdt.cross.arc.gnu.configuration.base">
          <enablement
                attribute="artifactExtension"
@@ -9676,99 +9583,6 @@
                </tool>
                <tool
                      id="org.eclipse.cdt.cross.arc.gnu.600.windows.lib.archiver.release"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.archiver.base">
-               </tool>
-            </toolChain>
-         </configuration>
-      </projectType>
-      <projectType
-            buildArtefactType="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.staticLib"
-            id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib"
-            isAbstract="true">
-         <configuration
-               artifactExtension="a"
-               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
-               id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.debug"
-               name="Debug"
-               parent="org.eclipse.cdt.cross.arc.gnu.windows.configuration.base.hs">
-            <toolChain
-                  id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.toolchain.debug"
-                  isAbstract="false"
-                  superClass="org.eclipse.cdt.cross.arc.gnu.windows.toolchain.base.hs"
-                  targetTool="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.archiver.debug">
-               <targetPlatform
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.platform.debug"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.platform.base">
-               </targetPlatform>
-               <builder
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.builder.debug"
-                     isAbstract="false"
-                     isVariableCaseSensitive="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.builder.base.hs">
-               </builder>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.assembler.debug"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.assembler.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.c.compiler.debug"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.c.compiler.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.cpp.compiler.debug"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.cpp.compiler.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.archiver.debug"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.archiver.base">
-               </tool>
-            </toolChain>
-         </configuration>
-         <configuration
-               artifactExtension="a"
-               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
-               id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.release"
-               name="Release"
-               parent="org.eclipse.cdt.cross.arc.gnu.windows.configuration.base.hs">
-            <toolChain
-                  id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.toolchain.release"
-                  isAbstract="false"
-                  superClass="org.eclipse.cdt.cross.arc.gnu.windows.toolchain.base.hs"
-                  targetTool="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.archiver.release">
-               <targetPlatform
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.platform.release"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.platform.base">
-               </targetPlatform>
-               <builder
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.builder.release"
-                     isAbstract="false"
-                     isVariableCaseSensitive="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.builder.base.hs">
-               </builder>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.assembler.release"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.assembler.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.c.compiler.release"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.c.compiler.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.cpp.compiler.release"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.windows.cpp.compiler.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.windows.lib.archiver.release"
                      isAbstract="false"
                      superClass="org.eclipse.cdt.cross.arc.gnu.windows.archiver.base">
                </tool>
